{
  "version": 4,
  "terraform_version": "1.5.1",
  "serial": 281,
  "lineage": "af8ee47e-3552-bd81-b14e-a5f7142b14f8",
  "resources": [
    {
      "module": "module.ec2_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c7217cdde317cfec",
            "arn": "arn:aws:ec2:us-east-1:484315828500:instance/i-00da77654403af1df",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00da77654403af1df",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "feenixdv",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01b92b2d7f25329bf",
            "private_dns": "ip-10-0-1-37.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.37",
            "public_ip": "54.175.174.87",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0fd7685d4b12ea5ba",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-07ccaeaa197281d5c"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0772bf793aa39989e",
            "tags": {
              "Name": "webserver-staging",
              "env": "staging",
              "team": "Devops"
            },
            "tags_all": {
              "Name": "webserver-staging",
              "env": "staging",
              "team": "Devops"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07ccaeaa197281d5c"
            ]
          },
          "dependencies": [
            "module.vpc_network.aws_security_group.all_ssh",
            "module.vpc_network.aws_subnet.public",
            "module.vpc_network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:484315828500:internet-gateway/igw-071803c250dc7662a",
            "id": "igw-071803c250dc7662a",
            "owner_id": "484315828500",
            "tags": {
              "Name": "public-gateway",
              "env": "staging"
            },
            "tags_all": {
              "Name": "public-gateway",
              "env": "staging"
            },
            "vpc_id": "vpc-0d4185a8da423b2b0"
          },
          "dependencies": [
            "module.vpc_network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:484315828500:route-table/rtb-04e29fd3961b5aa4b",
            "id": "rtb-04e29fd3961b5aa4b",
            "owner_id": "484315828500",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-071803c250dc7662a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d4185a8da423b2b0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_network.aws_internet_gateway.public",
            "module.vpc_network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02a0e8a1546abf35e",
            "route_table_id": "rtb-04e29fd3961b5aa4b",
            "subnet_id": "subnet-0772bf793aa39989e"
          },
          "dependencies": [
            "module.vpc_network.aws_internet_gateway.public",
            "module.vpc_network.aws_route_table.public_route_table",
            "module.vpc_network.aws_subnet.public",
            "module.vpc_network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "all_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:484315828500:security-group/sg-07ccaeaa197281d5c",
            "description": "Allows SSH access from anywhere",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07ccaeaa197281d5c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh",
            "name_prefix": "",
            "owner_id": "484315828500",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh",
              "env": "staging"
            },
            "tags_all": {
              "Name": "allow_ssh",
              "env": "staging"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d4185a8da423b2b0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:484315828500:subnet/subnet-00e4e3ead48e5cbd1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00e4e3ead48e5cbd1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "484315828500",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet",
              "env": "staging"
            },
            "tags_all": {
              "Name": "private-subnet",
              "env": "staging"
            },
            "vpc_id": "vpc-0d4185a8da423b2b0"
          },
          "dependencies": [
            "module.vpc_network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:484315828500:subnet/subnet-0772bf793aa39989e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0772bf793aa39989e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "484315828500",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet",
              "env": "staging"
            },
            "tags_all": {
              "Name": "public-subnet",
              "env": "staging"
            },
            "vpc_id": "vpc-0d4185a8da423b2b0"
          },
          "dependencies": [
            "module.vpc_network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:484315828500:vpc/vpc-0d4185a8da423b2b0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03f6f226da3ca0654",
            "default_route_table_id": "rtb-064d024d5df087c57",
            "default_security_group_id": "sg-0b0e0d9c62a3f3ec6",
            "dhcp_options_id": "dopt-0a1742a7a69c04a9e",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d4185a8da423b2b0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-064d024d5df087c57",
            "owner_id": "484315828500",
            "tags": {
              "Name": "vpc-staging",
              "env": "staging"
            },
            "tags_all": {
              "Name": "vpc-staging",
              "env": "staging"
            }
          }
        }
      ]
    }
  ]
}